fix: update background image source in CoverSection for improved asset organization
- Changed the background image source in the CoverSection from a test image to a new webp format image for better performance and organization.

--- a/src/components/ui/Button/buttons.scss
+++ b/src/components/ui/Button/buttons.scss
@@ -212,6 +212,7 @@
     @include mixin.respond('mobile') {
       padding: 12px 24px;
       font-size: 24px;
+      width: 100%;
     }
   }
 
